Bing/examples/good/09-scopes.bing
void main() {
    int a = 1;
    bool b = True;
    {   
        a = a + 2;
        println(a);
        int a = 2;
        println(a);
        println(b);
        string b = "nowe b";
        println(b);
    }

    println(a);
    println(b);
    println("Inner functions:");
    
    void zwieksz(int j) {
        j = a + 1;
        println(j);
    }
    print("call 1: ");
    zwieksz(a);
    print("call 2: ");
    zwieksz(&a);
    
    print("call 3: ");
    zwieksz(a);

}